Fixed line alignment

--- a/index.css
+++ b/index.css
@@ -117,11 +117,10 @@
   background-color: var(--body-copy);
   border: none;
   margin: 0;
-  margin-top: auto;
 }
 
 .footer {
-  margin-top: auto;
+  margin-top: 0;
   width: 100vw;
   height: 50px;
 }
